--- a/project/home.html
+++ b/project/home.html
@@ -38,25 +38,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a data-scroll class="nav-link a menuHome" href="/home.html">Inicio</a>
+                            <a data-scroll class="nav-link a menuHome" href="/project/home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionOne" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a menuSectionOne" href="/project/proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionTwo" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a menuSectionTwo" href="/project/apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionThree" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a menuSectionThree" href="/project/amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFour" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a menuSectionFour" href="/project/galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFive" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a menuSectionFive" href="/project/financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionSix" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a menuSectionSix" href="/project/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
