--- a/project/index.html
+++ b/project/index.html
@@ -20,9 +20,6 @@
 
 
     <title>Jardín del Tesoro</title>
-
-        <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     
 </head>
 
@@ -62,6 +59,9 @@
             </div>
         </footer>
     </section>
+
+    <!-- particles.js-->
+    <script src="./js/particles.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
