--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 
     <!-- Gibson Font -->
     <link rel="stylesheet" href="gibson/font.css">
