--- a/project/home.html
+++ b/project/home.html
@@ -38,7 +38,7 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a data-scroll class="nav-link a menuHome" href="/project/home.html">Inicio</a>
+                            <a data-scroll class="nav-link a menuHome" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link a menuSectionOne" href="/project/proyecto.html">Proyecto</a>
