--- a/project/contacto.html
+++ b/project/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="./css/contacto.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -32,25 +32,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="/home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -122,31 +122,31 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="imgs/torre9.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre9.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre4.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre4.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre7.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre7.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre10.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre10.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre11.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre11.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre12.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre12.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre13.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre13.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre14.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre14.jpg" class="d-block w-100 news" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="imgs/torre15.jpg" class="d-block w-100 news" alt="...">
+                            <img src="./imgs/torre15.jpg" class="d-block w-100 news" alt="...">
                         </div>
                     </div>
                 </div>
@@ -179,9 +179,9 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <script src="js/scrolltop.js"></script>
+    <script src="./js/scrolltop.js"></script>
 
-    <script src="js/contacto.js"></script>
+    <script src="./js/contacto.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
