--- a/project/financiamiento.html
+++ b/project/financiamiento.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/financiamiento.css">
+    <link rel="stylesheet" href="./css/financiamiento.css">
 
     <!-- Gibson Font -->
-    <link rel="stylesheet" href="gibson/font.css">
+    <link rel="stylesheet" href="./gibson/font.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,7 +27,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,25 +35,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6 m-0 p-0">
 
                 <div class="carousel-item active">
-                    <img src="imgs/torre9.jpg" class="d-block w-100 news" alt="..." id="imagen">
+                    <img src="./imgs/torre9.jpg" class="d-block w-100 news" alt="..." id="imagen">
                 </div>
 
 
@@ -354,7 +354,7 @@
                                         <div id="resultado" class="container" style="display: none;">
                                             <div class=" d-flex justify-content-center m-5">
                                                 <div class="brand img-fluid mx-5 text-center">
-                                                    <img src="imgs/Frame2.1.png" alt="">
+                                                    <img src="./imgs/Frame2.1.png" alt="">
                                                 </div>
                                             </div>
 
@@ -596,10 +596,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Scrolltop -->
-    <script src="js/scrolltop.js"></script>
+    <script src="./js/scrolltop.js"></script>
 
     <!-- Javascript -->
-    <script src="js/financiamiento.js"></script>
+    <script src="./js/financiamiento.js"></script>
 
     <!-- libreria SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
