--- a/project/galeria.html
+++ b/project/galeria.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/galeria.css">
+    <link rel="stylesheet" href="./css/galeria.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,7 +26,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,25 +34,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="/home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -90,60 +90,60 @@
             <div class="tab-content" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-fotos" role="tabpanel" aria-labelledby="pills-fotos-tab">
                     <div class="gallery">
-                        <a href="imgs/torre1.jpg">
-                            <img src="imgs/torre1.jpg" alt="torre">
+                        <a href="./imgs/torre1.jpg">
+                            <img src="./imgs/torre1.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre2.jpg">
-                            <img src="imgs/torre2.jpg" alt="torre">
+                        <a href="./imgs/torre2.jpg">
+                            <img src="./imgs/torre2.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre3.jpg">
-                            <img src="imgs/torre3.jpg" alt="torre">
+                        <a href="./imgs/torre3.jpg">
+                            <img src="./imgs/torre3.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre4.jpg">
-                            <img src="imgs/torre4.jpg" alt="torre">
+                        <a href="./imgs/torre4.jpg">
+                            <img src="./imgs/torre4.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre5.jpg">
-                            <img src="imgs/torre5.jpg" alt="torre">
+                        <a href="./imgs/torre5.jpg">
+                            <img src="./imgs/torre5.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre6.jpg">
-                            <img src="imgs/torre6.jpg" alt="torre">
+                        <a href="./imgs/torre6.jpg">
+                            <img src="./imgs/torre6.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre8.jpg">
-                            <img src="imgs/torre8.jpg" alt="torre">
+                        <a href="./imgs/torre8.jpg">
+                            <img src="./imgs/torre8.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre9.jpg">
-                            <img src="imgs/torre9.jpg" alt="torre">
+                        <a href="./imgs/torre9.jpg">
+                            <img src="./imgs/torre9.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre11.jpg">
-                            <img src="imgs/torre11.jpg" alt="torre">
+                        <a href="./imgs/torre11.jpg">
+                            <img src="./imgs/torre11.jpg" alt="torre">
                         </a>
-                        <a href="imgs/foto-1.JPG">
-                            <img src="imgs/foto-1.JPG" alt="torre">
+                        <a href="./imgs/foto-1.JPG">
+                            <img src="./imgs/foto-1.JPG" alt="torre">
                         </a>
-                        <a href="imgs/torre10.jpg">
-                            <img src="imgs/torre10.jpg" alt="torre">
+                        <a href="./imgs/torre10.jpg">
+                            <img src="./imgs/torre10.jpg" alt="torre">
                         </a>
-                        <a href="imgs/torre13.jpg">
-                            <img src="imgs/torre13.jpg" alt="torre">
+                        <a href="./imgs/torre13.jpg">
+                            <img src="./imgs/torre13.jpg" alt="torre">
                         </a>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pills-disenos" role="tabpanel" aria-labelledby="pills-disenos-tab">
                     <div class="gallery">
-                        <a href="imgs/level-0.jpg">
-                            <img src="imgs/level-0.jpg" alt="torre">
+                        <a href="./imgs/level-0.jpg">
+                            <img src="./imgs/level-0.jpg" alt="torre">
                         </a>
-                        <a href="imgs/level-1.jpg">
-                            <img src="imgs/level-1.jpg" alt="torre">
+                        <a href="./imgs/level-1.jpg">
+                            <img src="./imgs/level-1.jpg" alt="torre">
                         </a>
-                        <a href="imgs/level-2.jpg">
-                            <img src="imgs/level-2.jpg" alt="torre">
+                        <a href="./imgs/level-2.jpg">
+                            <img src="./imgs/level-2.jpg" alt="torre">
                         </a>
-                        <a href="imgs/plan1.jpeg">
-                            <img src="imgs/plan1.jpeg" alt="torre">
+                        <a href="./imgs/plan1.jpeg">
+                            <img src="./imgs/plan1.jpeg" alt="torre">
                         </a>
-                        <a href="imgs/level-3.jpg">
-                            <img src="imgs/level-3.jpg" alt="torre">
+                        <a href="./imgs/level-3.jpg">
+                            <img src="./imgs/level-3.jpg" alt="torre">
                         </a>
                     </div>
                 </div>
@@ -184,10 +184,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Scroll Top -->
-    <script src="js/scrolltop.js"></script>
+    <script src="./js/scrolltop.js"></script>
 
     <!-- Javascript -->
-    <script src="js/galeria.js"></script>
+    <script src="./js/galeria.js"></script>
 
     <!-- light gallery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
