--- a/project/home.html
+++ b/project/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/home.css">
 
     <!-- Gibson Font -->
-    <link rel="stylesheet" href="gibson/font.css">
+    <link rel="stylesheet" href="./gibson/font.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,22 +41,22 @@
                             <a data-scroll class="nav-link a menuHome" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionOne" href="/project/proyecto.html">Proyecto</a>
+                            <a class="nav-link a menuSectionOne" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionTwo" href="/project/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a menuSectionTwo" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionThree" href="/project/amenidades.html">Amenidades</a>
+                            <a class="nav-link a menuSectionThree" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFour" href="/project/galeria.html">Galeria</a>
+                            <a class="nav-link a menuSectionFour" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionFive" href="/project/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a menuSectionFive" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a menuSectionSix" href="/project/contacto.html">Contacto</a>
+                            <a class="nav-link a menuSectionSix" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
