--- a/project/proyecto.html
+++ b/project/proyecto.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/proyecto.css">
+    <link rel="stylesheet" href="./css/proyecto.css">
 
-    <link rel="stylesheet" href="css/tira.css">
+    <link rel="stylesheet" href="./css/tira.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -28,7 +28,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/logo-3.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/logo-3.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,25 +36,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="/home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -157,13 +157,13 @@
             <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imgs/level-0.jpg" class="d-block w-100 news" alt="...">
+                        <img src="./imgs/level-0.jpg" class="d-block w-100 news" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imgs/level-1.jpg" class="d-block w-100 news" alt="...">
+                        <img src="./imgs/level-1.jpg" class="d-block w-100 news" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imgs/level-2.jpg" class="d-block w-100 news" alt="...">
+                        <img src="./imgs/level-2.jpg" class="d-block w-100 news" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -186,42 +186,42 @@
                 <div class="item">
                     <div class="">
                         <!-- lazyOwl es una instruccion de JS para agilizar la carga de las fotos -->
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-1.png" alt="Cliente1">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-1.png" alt="Cliente1">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-2.jpeg" alt="Cliente2">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-2.jpeg" alt="Cliente2">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-3.jpeg" alt="Cliente3">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-3.jpeg" alt="Cliente3">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-4.png" alt="Cliente4">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-4.png" alt="Cliente4">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-5.jpeg" alt="Cliente5">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-5.jpeg" alt="Cliente5">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-6.png" alt="Cliente6">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-6.png" alt="Cliente6">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-7.jpeg" alt="Cliente7">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-7.jpeg" alt="Cliente7">
                     </div>
                 </div>
                 <div class="item">
                     <div class="">
-                        <img class="lazyOwl img-fluid rounded-circle" data-src="imgs/company-8.jpeg" alt="Cliente8">
+                        <img class="lazyOwl img-fluid rounded-circle" data-src="./imgs/company-8.jpeg" alt="Cliente8">
                     </div>
                 </div>
             </div>
@@ -237,23 +237,23 @@
                 <h1 class="title">Fotos</h1>
             </div>
             <div class="gallery">
-                <a href="imgs/level-0.jpg">
-                    <img src="imgs/level-0.jpg" alt="torre">
+                <a href="./imgs/level-0.jpg">
+                    <img src="./imgs/level-0.jpg" alt="torre">
                 </a>
-                <a href="imgs/level-1.jpg">
-                    <img src="imgs/level-1.jpg" alt="torre">
+                <a href="./imgs/level-1.jpg">
+                    <img src="./imgs/level-1.jpg" alt="torre">
                 </a>
-                <a href="imgs/level-2.jpg">
-                    <img src="imgs/level-2.jpg" alt="torre">
+                <a href="./imgs/level-2.jpg">
+                    <img src="./imgs/level-2.jpg" alt="torre">
                 </a>
-                <a href="imgs/plan1.jpeg">
-                    <img src="imgs/plan1.jpeg" alt="torre">
+                <a href="./imgs/plan1.jpeg">
+                    <img src="./imgs/plan1.jpeg" alt="torre">
                 </a>
-                <a href="imgs/level-3.jpg">
-                    <img src="imgs/level-3.jpg" alt="torre">
+                <a href="./imgs/level-3.jpg">
+                    <img src="./imgs/level-3.jpg" alt="torre">
                 </a>
-                <a href="imgs/torre6.jpg">
-                    <img src="imgs/torre6.jpg" alt="torre">
+                <a href="./imgs/torre6.jpg">
+                    <img src="./imgs/torre6.jpg" alt="torre">
                 </a>
             </div>
             <div class="container2 d-flex justify-content-center">
