--- a/project/amenidades.html
+++ b/project/amenidades.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/amenidades.css">
+    <link rel="stylesheet" href="./css/amenidades.css">
 
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,7 +25,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/logo-4.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/logo-4.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,25 +33,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="/home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -94,10 +94,10 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
                             </div>
                         </div>
                     </div>
@@ -124,23 +124,23 @@
                 <h1 class="title">Fotos</h1>
             </div>
             <div class="gallery">
-                <a href="imgs/interior3.jpg">
-                    <img src="imgs/interior3.jpg" alt="torre">
+                <a href="./imgs/interior3.jpg">
+                    <img src="./imgs/interior3.jpg" alt="torre">
                 </a>
-                <a href="imgs/torre2.jpg">
-                    <img src="imgs/torre2.jpg" alt="torre">
+                <a href="./imgs/torre2.jpg">
+                    <img src="./imgs/torre2.jpg" alt="torre">
                 </a>
-                <a href="imgs/torre3.jpg">
-                    <img src="imgs/torre3.jpg" alt="torre">
+                <a href="./imgs/torre3.jpg">
+                    <img src="./imgs/torre3.jpg" alt="torre">
                 </a>
-                <a href="imgs/interior4.jpg">
-                    <img src="imgs/interior4.jpg" alt="torre">
+                <a href="./imgs/interior4.jpg">
+                    <img src="./imgs/interior4.jpg" alt="torre">
                 </a>
-                <a href="imgs/torre5.jpg">
-                    <img src="imgs/torre5.jpg" alt="torre">
+                <a href="./imgs/torre5.jpg">
+                    <img src="./imgs/torre5.jpg" alt="torre">
                 </a>
-                <a href="imgs/interior7.jpg">
-                    <img src="imgs/interior7.jpg" alt="torre">
+                <a href="./imgs/interior7.jpg">
+                    <img src="./imgs/interior7.jpg" alt="torre">
                 </a>
             </div>
             <div class="container2 d-flex justify-content-center">
@@ -191,9 +191,9 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <script src="js/scrolltop.js"></script>
+    <script src="./js/scrolltop.js"></script>
 
-    <script src="js/amenidades.js"></script>
+    <script src="./js/amenidades.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
