--- a/project/apartamentos.html
+++ b/project/apartamentos.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Styles CSS -->
-    <link rel="stylesheet" href="css/apartamentos.css">
+    <link rel="stylesheet" href="./css/apartamentos.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
 
 
-    <link href="css/jquery.timepicker.css">
+    <link href="./css/jquery.timepicker.css">
 
     <title>Treasure Garden</title>
 </head>
@@ -37,7 +37,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/logo-4.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/logo-4.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,25 +45,25 @@
                 <div class="gigi">
                     <ul class="nav navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link a" href="/home.html">Inicio</a>
+                            <a class="nav-link a" href="./home.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/proyecto.html">Proyecto</a>
+                            <a class="nav-link a" href="./proyecto.html">Proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/apartamentos.html">Apartamentos</a>
+                            <a class="nav-link a" href="./apartamentos.html">Apartamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/amenidades.html">Amenidades</a>
+                            <a class="nav-link a" href="./amenidades.html">Amenidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/galeria.html">Galeria</a>
+                            <a class="nav-link a" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/financiamiento.html">Financiamiento</a>
+                            <a class="nav-link a" href="./financiamiento.html">Financiamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link a" href="/contacto.html">Contacto</a>
+                            <a class="nav-link a" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -111,10 +111,10 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-1.jpeg" class="d-block w-100 news" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
+                                <img src="./imgs/apart-2.jpeg" class="d-block w-100 news" alt="...">
                             </div>
                         </div>
                     </div>
@@ -246,23 +246,23 @@
                 <h1 class="title">Fotos</h1>
             </div>
             <div class="gallery">
-                <a href="imgs/apart-1.jpeg">
-                    <img src="imgs/apart-1.jpeg" alt="torre">
+                <a href="./imgs/apart-1.jpeg">
+                    <img src="./imgs/apart-1.jpeg" alt="torre">
                 </a>
-                <a href="imgs/torre2.jpg">
-                    <img src="imgs/torre2.jpg" alt="torre">
+                <a href="./imgs/torre2.jpg">
+                    <img src="./imgs/torre2.jpg" alt="torre">
                 </a>
-                <a href="imgs/apart-2.jpeg">
-                    <img src="imgs/apart-2.jpeg" alt="torre">
+                <a href="./imgs/apart-2.jpeg">
+                    <img src="./imgs/apart-2.jpeg" alt="torre">
                 </a>
-                <a href="imgs/apart-4.jpeg">
-                    <img src="imgs/apart-4.jpeg" alt="torre">
+                <a href="./imgs/apart-4.jpeg">
+                    <img src="./imgs/apart-4.jpeg" alt="torre">
                 </a>
-                <a href="imgs/apart-3.jpeg">
-                    <img src="imgs/apart-3.jpeg" alt="torre">
+                <a href="./imgs/apart-3.jpeg">
+                    <img src="./imgs/apart-3.jpeg" alt="torre">
                 </a>
-                <a href="imgs/apartamentos.jpg">
-                    <img src="imgs/apartamentos.jpg" alt="torre">
+                <a href="./imgs/apartamentos.jpg">
+                    <img src="./imgs/apartamentos.jpg" alt="torre">
                 </a>
             </div>
             <div class="container2 d-flex justify-content-center">
@@ -347,18 +347,18 @@
     </script>
 
 
-    <script src="js/scrolltop.js"></script>
+    <script src="./js/scrolltop.js"></script>
 
     <!-- CARGAS JS LIBRERIAS CONTADOR NUMERICO -->
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="./js/jquery.waypoints.min.js"></script>
+    <script src="./js/jquery.stellar.min.js"></script>
+    <script src="./js/jquery.animateNumber.min.js"></script>
+    <script src="./js/bootstrap-datepicker.js"></script>
+    <script src="./js/jquery.timepicker.min.js"></script>
+    <script src="./js/jquery.magnific-popup.min.js"></script>
+    <script src="./js/scrollax.min.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
