--- a/project/apartamentos.html
+++ b/project/apartamentos.html
@@ -28,6 +28,9 @@
 
 
     <link href="./css/jquery.timepicker.css">
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
 
     <title>Treasure Garden</title>
 </head>
