--- a/project/index.html
+++ b/project/index.html
@@ -18,6 +18,8 @@
     <!-- Google Earth -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
 
     <title>Jardín del Tesoro</title>
     
