--- a/project/proyecto.html
+++ b/project/proyecto.html
@@ -20,6 +20,9 @@
     <!-- light gallery -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
+    
     <title>Hello, world!</title>
 </head>
 
