--- a/project/home.html
+++ b/project/home.html
@@ -22,6 +22,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="imgs/logo-5.png">
+
     <title>Jardín del Tesoro</title>
 </head>
 
@@ -30,7 +34,7 @@
     <!-- Header -->
     <nav id="navbar_top" class="menu navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
+            <a class="navbar-brand" href="#"><img src="./imgs/Frame2.1.png" alt="logo" height="80px" width="90px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
